# include-postgres-sql

./: Cargo.toml  LICENSE  README.md
docs/: index.md
etc/: Chinook_PostgreSql.sql
examples/: async_bb8_pool.rs  chinook.rs  chinook.sql  library.rs  library.sql
examples/async/: bb8_pool.rs  dyn_dml.rs  query_dyn_args.rs  query_dyn_args.sql  query_no_args.rs  query_no_args.sql  query_one_arg.rs  query_one_arg.sql  query_two_args.rs  query_two_args.sql  returning_dml.rs  returning_dml.sql  simple_dml.rs
src/: async_await.rs  lib.rs  sync.rs  util.rs
tests/: async_dml_dyn.rs  async_dml_returning.rs  async_dml_simple.rs  async_query_dyn_args.rs  async_query_dyn_args_into_rows.rs  async_query_dyn_args_into_vec.rs  async_query_no_args.rs  async_query_no_args_into_rows.rs  async_query_no_args_into_vec.rs  async_query_with_args.rs  async_query_with_args_into_rows.rs  async_query_with_args_into_vec.rs  async_query_with_gen_args.rs  async_query_with_gen_args_into_rows.rs  async_query_with_gen_args_into_vec.rs  sync_dml_dyn.rs  sync_dml_returning.rs  sync_dml_simple.rs  sync_query_dyn_args.rs  sync_query_dyn_args_into_rows.rs  sync_query_dyn_args_into_vec.rs  sync_query_no_args.rs  sync_query_no_args_into_rows.rs  sync_query_no_args_into_vec.rs  sync_query_with_args.rs  sync_query_with_args_into_rows.rs  sync_query_with_args_into_vec.rs  sync_query_with_gen_args.rs  sync_query_with_gen_args_into_rows.rs  sync_query_with_gen_args_into_vec.rs
tests/sql/: dml_dyn.sql  dml_returning.sql  dml_simple.sql  query_dyn_args.sql  query_dyn_args_into_rows.sql  query_dyn_args_into_vec.sql  query_no_args.sql  query_no_args_into_rows.sql  query_no_args_into_vec.sql  query_with_args.sql  query_with_args_into_rows.sql  query_with_args_into_vec.sql  query_with_gen_args.sql  query_with_gen_args_into_rows.sql  query_with_gen_args_into_vec.sql
