[package]
name = "include-postgres-sql"
description = "A Yesql inspired macro for using PostgreSQL SQL in Rust" 
version = "0.1.10"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["database","sql","macro","postgres"]
categories = ["database"]
repository = "https://github.com/quietboil/include-postgres-sql"
homepage = "https://quietboil.github.io/include-postgres-sql" 

[dependencies]
include-sql = "0.2"
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
postgres = "0.19"
tokio-postgres = "0.7"
bb8-postgres = "0.8"
tokio = { version = "1", features = ["full"] }

[features]
tokio = ["include-sql/async", "futures-util"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "async_bb8_pool"
path = "examples/async_bb8_pool.rs"
required-features = ["tokio"]
